# bazel-test-projects-by-languages

./: .gitignore  README.md
go/with_go_source/: BUILD.bazel  MODULE.bazel  README.md  deps.bzl  go.mod  with_go_source.bazelproject
go/with_go_source/main/: BUILD.bazel  main.go
go/with_go_source/testb/: BUILD.bazel  testb.go  testb_test.go
go/with_proto/: README.md  with_proto.bazelproject
go/with_proto/run_configurations/: test_macro_expansion.xml
kotlin/coroutineDebug/: .gitignore  MODULE.bazel  maven_install.json
kotlin/coroutineDebug/src/main/org/example/: BUILD.bazel  Main.kt
kotlin/coroutineDebug/src/test/org/example/: BUILD.bazel  TestCoroutine.kt  TestMain.kt
scala/scala2/: .gitignore  README.md  WORKSPACE
scala/scala2/example-lib/test/: Test.scala
scala/scala3/: .gitignore  BUILD  Hello.scala  MODULE.bazel  Main.scala  Person.scala  WORKSPACE  maven_install.json  projectview.bazelproject
