module(name = "scala3")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# scala3 setup
git_override(
    module_name = "rules_scala",
    #branch = "bazel-8-compatibility",
    commit = "fbdcdb93b58a92a5fbc71ed1a10b75d68cecc8be",
    remote = "https://github.com/mbland/rules_scala.git",
)

bazel_dep(name = "rules_scala")

scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)

scala_config.settings(scala_version = "3.3.5")

scala_dev_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_dev_deps.toolchains(
    scalatest = True,
)


bazel_dep(name = "rules_jvm_external", version = "6.7")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.fasterxml.jackson.module:jackson-module-kotlin:2.18.3",
        "com.google.code.gson:gson:2.12.1",
        "com.google.guava:guava:31.0.1-jre",
    ],
    fail_if_repin_required = True,
    generate_compat_repositories = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://cache-redirector.jetbrains.com/maven-central",
        "https://cache-redirector.jetbrains.com/intellij-dependencies",
        "https://www.jetbrains.com/intellij-repository/releases",
        "https://www.jetbrains.com/intellij-repository/snapshots",
    ],
)

use_repo(maven, "maven")