load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "main",
    embed = [":main_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "main_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/intellij/examples/go/with_go_source/main",
    visibility = ["//visibility:private"],
)
